[package]
name = "trekrank"
version = "0.1.0"
authors = ["\"Ben Bariteau <\"ben.bariteau@gmail.com\">"]

[dependencies]
askama = "^0.5.0"
iron = "^0.6.0"
params = "^0.8.0"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
num-rational = "<0.1.41"
error-chain = "^0.11.0"
env_logger = "^0.5.3"
logger = "^0.4.0"

[build-dependencies]
askama = "^0.5.0"
